horizontal scroll fixed

--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -32,15 +32,17 @@
     object-position: center;
 
     transform: translateY(24%);
+    right: 0;
 
     @include onTablet {
       transform: translateY(-26%);
-      left: 10%;
+      left: 0;
+      right: 0;
     }
 
     @include onDesktop {
       transform: translateY(-44%);
-      left: 30%;
+      left: 28%;
     }
 
     @include onDesktopXL {
@@ -85,6 +87,7 @@
     50% {
       transform: scale(1.1);
     }
+
     100% {
       transform: scale(1);
     }
