--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1;
 
   box-sizing: border-box;
   width: 100%;
